# l4_windsensor

./: .cproject  .gitignore  .mxproject  CMakeLists.txt  STM32L432KCUx_FLASH.cmake  l4-windsensor.ioc  l4-windsensor.txt  openocd.cfg
Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  windsounder.h
SVD_Inc/: ADC.h  AES.h  CAN1.h  COMP.h  CRC.h  CRS.h  DAC1.h  DMA1.h  DMA2.h  EXTI.h  FIREWALL.h  FLASH.h  GPIOA.h  GPIOB.h  GPIOC.h  GPIOD.h  GPIOE.h  GPIOH.h  I2C1.h  I2C3.h  IWDG.h  LCD.h  LPTIM1.h  LPTIM2.h  LPUART1.h  NVIC.h  OPAMP.h  PWR.h  QUADSPI.h  RCC.h  RNG.h  RTC.h  SAI1.h  SDMMC.h  SPI1.h  SPI3.h  SWPMI1.h  SYSCFG.h  TIM1.h  TIM15.h  (+10 more)
Src/: main.c  measure.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
